# rs_tesseract_lib

./: Cargo.toml
src/: error.rs  lib.rs  rust_tesseract.rs
