[package]
name = "rs_tesseract_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
polars = "0.18.0"
ndarray = "0.15.4"
substring = "1.4.5"
multimap = "0.8.3"
image = "0.23.14"
lazy_static = "1.4.0"

[lib]
crate-type = ["lib","staticlib","cdylib",]